// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NotFoundErrors component renders correctly for index-pattern type 1`] = `
<NotFoundErrors
  type="index-pattern"
>
  <EuiPageContent
    color="danger"
    horizontalPosition="center"
    verticalPosition="center"
  >
    <EuiPanel
      className="euiPageContent euiPageContent--verticalCenter euiPageContent--horizontalCenter"
      color="danger"
      paddingSize="l"
      role="main"
    >
      <div
        className="euiPanel euiPanel--paddingLarge euiPanel--borderRadiusMedium euiPanel--danger euiPanel--noShadow euiPanel--noBorder euiPageContent euiPageContent--verticalCenter euiPageContent--horizontalCenter"
        role="main"
      >
        <EuiEmptyPrompt
          body={
            <React.Fragment>
              <div>
                <FormattedMessage
                  defaultMessage="The index pattern associated with this object no longer exists."
                  id="savedObjectsManagement.view.indexPatternDoesNotExistErrorMessage"
                  values={Object {}}
                />
              </div>
              <p>
                <FormattedMessage
                  defaultMessage="If you know what this error means, go ahead and fix it — otherwise click the delete button above."
                  id="savedObjectsManagement.view.howToFixErrorDescription"
                  values={Object {}}
                />
              </p>
            </React.Fragment>
          }
          iconType="alert"
          title={
            <h2>
              <FormattedMessage
                defaultMessage="There is a problem with this saved object"
                id="savedObjectsManagement.view.savedObjectProblemErrorMessage"
                values={Object {}}
              />
            </h2>
          }
        >
          <div
            className="euiEmptyPrompt"
          >
            <EuiIcon
              color="subdued"
              size="xxl"
              type="alert"
            >
              <span
                color="subdued"
                data-euiicon-type="alert"
                size="xxl"
              />
            </EuiIcon>
            <EuiSpacer
              size="s"
            >
              <div
                className="euiSpacer euiSpacer--s"
              />
            </EuiSpacer>
            <EuiTextColor
              color="subdued"
            >
              <span
                className="euiTextColor euiTextColor--subdued"
              >
                <EuiTitle
                  size="m"
                >
                  <h2
                    className="euiTitle euiTitle--medium"
                  >
                    <FormattedMessage
                      defaultMessage="There is a problem with this saved object"
                      id="savedObjectsManagement.view.savedObjectProblemErrorMessage"
                      values={Object {}}
                    >
                      There is a problem with this saved object
                    </FormattedMessage>
                  </h2>
                </EuiTitle>
                <EuiSpacer
                  size="m"
                >
                  <div
                    className="euiSpacer euiSpacer--m"
                  />
                </EuiSpacer>
                <EuiText>
                  <div
                    className="euiText euiText--medium"
                  >
                    <div>
                      <FormattedMessage
                        defaultMessage="The index pattern associated with this object no longer exists."
                        id="savedObjectsManagement.view.indexPatternDoesNotExistErrorMessage"
                        values={Object {}}
                      >
                        The index pattern associated with this object no longer exists.
                      </FormattedMessage>
                    </div>
                    <p>
                      <FormattedMessage
                        defaultMessage="If you know what this error means, go ahead and fix it — otherwise click the delete button above."
                        id="savedObjectsManagement.view.howToFixErrorDescription"
                        values={Object {}}
                      >
                        If you know what this error means, go ahead and fix it — otherwise click the delete button above.
                      </FormattedMessage>
                    </p>
                  </div>
                </EuiText>
              </span>
            </EuiTextColor>
          </div>
        </EuiEmptyPrompt>
      </div>
    </EuiPanel>
  </EuiPageContent>
</NotFoundErrors>
`;

exports[`NotFoundErrors component renders correctly for index-pattern-field type 1`] = `
<NotFoundErrors
  type="index-pattern-field"
>
  <EuiPageContent
    color="danger"
    horizontalPosition="center"
    verticalPosition="center"
  >
    <EuiPanel
      className="euiPageContent euiPageContent--verticalCenter euiPageContent--horizontalCenter"
      color="danger"
      paddingSize="l"
      role="main"
    >
      <div
        className="euiPanel euiPanel--paddingLarge euiPanel--borderRadiusMedium euiPanel--danger euiPanel--noShadow euiPanel--noBorder euiPageContent euiPageContent--verticalCenter euiPageContent--horizontalCenter"
        role="main"
      >
        <EuiEmptyPrompt
          body={
            <React.Fragment>
              <div>
                <FormattedMessage
                  defaultMessage="A field associated with this object no longer exists in the index pattern."
                  id="savedObjectsManagement.view.fieldDoesNotExistErrorMessage"
                  values={Object {}}
                />
              </div>
              <p>
                <FormattedMessage
                  defaultMessage="If you know what this error means, go ahead and fix it — otherwise click the delete button above."
                  id="savedObjectsManagement.view.howToFixErrorDescription"
                  values={Object {}}
                />
              </p>
            </React.Fragment>
          }
          iconType="alert"
          title={
            <h2>
              <FormattedMessage
                defaultMessage="There is a problem with this saved object"
                id="savedObjectsManagement.view.savedObjectProblemErrorMessage"
                values={Object {}}
              />
            </h2>
          }
        >
          <div
            className="euiEmptyPrompt"
          >
            <EuiIcon
              color="subdued"
              size="xxl"
              type="alert"
            >
              <span
                color="subdued"
                data-euiicon-type="alert"
                size="xxl"
              />
            </EuiIcon>
            <EuiSpacer
              size="s"
            >
              <div
                className="euiSpacer euiSpacer--s"
              />
            </EuiSpacer>
            <EuiTextColor
              color="subdued"
            >
              <span
                className="euiTextColor euiTextColor--subdued"
              >
                <EuiTitle
                  size="m"
                >
                  <h2
                    className="euiTitle euiTitle--medium"
                  >
                    <FormattedMessage
                      defaultMessage="There is a problem with this saved object"
                      id="savedObjectsManagement.view.savedObjectProblemErrorMessage"
                      values={Object {}}
                    >
                      There is a problem with this saved object
                    </FormattedMessage>
                  </h2>
                </EuiTitle>
                <EuiSpacer
                  size="m"
                >
                  <div
                    className="euiSpacer euiSpacer--m"
                  />
                </EuiSpacer>
                <EuiText>
                  <div
                    className="euiText euiText--medium"
                  >
                    <div>
                      <FormattedMessage
                        defaultMessage="A field associated with this object no longer exists in the index pattern."
                        id="savedObjectsManagement.view.fieldDoesNotExistErrorMessage"
                        values={Object {}}
                      >
                        A field associated with this object no longer exists in the index pattern.
                      </FormattedMessage>
                    </div>
                    <p>
                      <FormattedMessage
                        defaultMessage="If you know what this error means, go ahead and fix it — otherwise click the delete button above."
                        id="savedObjectsManagement.view.howToFixErrorDescription"
                        values={Object {}}
                      >
                        If you know what this error means, go ahead and fix it — otherwise click the delete button above.
                      </FormattedMessage>
                    </p>
                  </div>
                </EuiText>
              </span>
            </EuiTextColor>
          </div>
        </EuiEmptyPrompt>
      </div>
    </EuiPanel>
  </EuiPageContent>
</NotFoundErrors>
`;

exports[`NotFoundErrors component renders correctly for search type 1`] = `
<NotFoundErrors
  type="search"
>
  <EuiPageContent
    color="danger"
    horizontalPosition="center"
    verticalPosition="center"
  >
    <EuiPanel
      className="euiPageContent euiPageContent--verticalCenter euiPageContent--horizontalCenter"
      color="danger"
      paddingSize="l"
      role="main"
    >
      <div
        className="euiPanel euiPanel--paddingLarge euiPanel--borderRadiusMedium euiPanel--danger euiPanel--noShadow euiPanel--noBorder euiPageContent euiPageContent--verticalCenter euiPageContent--horizontalCenter"
        role="main"
      >
        <EuiEmptyPrompt
          body={
            <React.Fragment>
              <div>
                <FormattedMessage
                  defaultMessage="The saved search associated with this object no longer exists."
                  id="savedObjectsManagement.view.savedSearchDoesNotExistErrorMessage"
                  values={Object {}}
                />
              </div>
              <p>
                <FormattedMessage
                  defaultMessage="If you know what this error means, go ahead and fix it — otherwise click the delete button above."
                  id="savedObjectsManagement.view.howToFixErrorDescription"
                  values={Object {}}
                />
              </p>
            </React.Fragment>
          }
          iconType="alert"
          title={
            <h2>
              <FormattedMessage
                defaultMessage="There is a problem with this saved object"
                id="savedObjectsManagement.view.savedObjectProblemErrorMessage"
                values={Object {}}
              />
            </h2>
          }
        >
          <div
            className="euiEmptyPrompt"
          >
            <EuiIcon
              color="subdued"
              size="xxl"
              type="alert"
            >
              <span
                color="subdued"
                data-euiicon-type="alert"
                size="xxl"
              />
            </EuiIcon>
            <EuiSpacer
              size="s"
            >
              <div
                className="euiSpacer euiSpacer--s"
              />
            </EuiSpacer>
            <EuiTextColor
              color="subdued"
            >
              <span
                className="euiTextColor euiTextColor--subdued"
              >
                <EuiTitle
                  size="m"
                >
                  <h2
                    className="euiTitle euiTitle--medium"
                  >
                    <FormattedMessage
                      defaultMessage="There is a problem with this saved object"
                      id="savedObjectsManagement.view.savedObjectProblemErrorMessage"
                      values={Object {}}
                    >
                      There is a problem with this saved object
                    </FormattedMessage>
                  </h2>
                </EuiTitle>
                <EuiSpacer
                  size="m"
                >
                  <div
                    className="euiSpacer euiSpacer--m"
                  />
                </EuiSpacer>
                <EuiText>
                  <div
                    className="euiText euiText--medium"
                  >
                    <div>
                      <FormattedMessage
                        defaultMessage="The saved search associated with this object no longer exists."
                        id="savedObjectsManagement.view.savedSearchDoesNotExistErrorMessage"
                        values={Object {}}
                      >
                        The saved search associated with this object no longer exists.
                      </FormattedMessage>
                    </div>
                    <p>
                      <FormattedMessage
                        defaultMessage="If you know what this error means, go ahead and fix it — otherwise click the delete button above."
                        id="savedObjectsManagement.view.howToFixErrorDescription"
                        values={Object {}}
                      >
                        If you know what this error means, go ahead and fix it — otherwise click the delete button above.
                      </FormattedMessage>
                    </p>
                  </div>
                </EuiText>
              </span>
            </EuiTextColor>
          </div>
        </EuiEmptyPrompt>
      </div>
    </EuiPanel>
  </EuiPageContent>
</NotFoundErrors>
`;

exports[`NotFoundErrors component renders correctly for unknown type 1`] = `
<NotFoundErrors
  type="unknown"
>
  <EuiPageContent
    color="danger"
    horizontalPosition="center"
    verticalPosition="center"
  >
    <EuiPanel
      className="euiPageContent euiPageContent--verticalCenter euiPageContent--horizontalCenter"
      color="danger"
      paddingSize="l"
      role="main"
    >
      <div
        className="euiPanel euiPanel--paddingLarge euiPanel--borderRadiusMedium euiPanel--danger euiPanel--noShadow euiPanel--noBorder euiPageContent euiPageContent--verticalCenter euiPageContent--horizontalCenter"
        role="main"
      >
        <EuiEmptyPrompt
          body={
            <React.Fragment>
              <div />
              <p>
                <FormattedMessage
                  defaultMessage="If you know what this error means, go ahead and fix it — otherwise click the delete button above."
                  id="savedObjectsManagement.view.howToFixErrorDescription"
                  values={Object {}}
                />
              </p>
            </React.Fragment>
          }
          iconType="alert"
          title={
            <h2>
              <FormattedMessage
                defaultMessage="There is a problem with this saved object"
                id="savedObjectsManagement.view.savedObjectProblemErrorMessage"
                values={Object {}}
              />
            </h2>
          }
        >
          <div
            className="euiEmptyPrompt"
          >
            <EuiIcon
              color="subdued"
              size="xxl"
              type="alert"
            >
              <span
                color="subdued"
                data-euiicon-type="alert"
                size="xxl"
              />
            </EuiIcon>
            <EuiSpacer
              size="s"
            >
              <div
                className="euiSpacer euiSpacer--s"
              />
            </EuiSpacer>
            <EuiTextColor
              color="subdued"
            >
              <span
                className="euiTextColor euiTextColor--subdued"
              >
                <EuiTitle
                  size="m"
                >
                  <h2
                    className="euiTitle euiTitle--medium"
                  >
                    <FormattedMessage
                      defaultMessage="There is a problem with this saved object"
                      id="savedObjectsManagement.view.savedObjectProblemErrorMessage"
                      values={Object {}}
                    >
                      There is a problem with this saved object
                    </FormattedMessage>
                  </h2>
                </EuiTitle>
                <EuiSpacer
                  size="m"
                >
                  <div
                    className="euiSpacer euiSpacer--m"
                  />
                </EuiSpacer>
                <EuiText>
                  <div
                    className="euiText euiText--medium"
                  >
                    <div />
                    <p>
                      <FormattedMessage
                        defaultMessage="If you know what this error means, go ahead and fix it — otherwise click the delete button above."
                        id="savedObjectsManagement.view.howToFixErrorDescription"
                        values={Object {}}
                      >
                        If you know what this error means, go ahead and fix it — otherwise click the delete button above.
                      </FormattedMessage>
                    </p>
                  </div>
                </EuiText>
              </span>
            </EuiTextColor>
          </div>
        </EuiEmptyPrompt>
      </div>
    </EuiPanel>
  </EuiPageContent>
</NotFoundErrors>
`;
